--- a/algoritmos-3-frontend-vite/src/index.css
+++ b/algoritmos-3-frontend-vite/src/index.css
@@ -25,9 +25,9 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  /*display: flex;
   place-items: center;
-  min-width: 320px;
+  */min-width: 320px;
   min-height: 100vh;
 }
 
@@ -67,3 +67,7 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+  :Link{
+    margin-right: 100px;
+  }
